<resources>
    <string name="app_name">My Application</string>
    <string name="dz0">DZ0</string>
    <string name="dz1">DZ1</string>
    <string name="dz2">DZ2</string>
    <string name="dz2login">DZ2Login</string>
    <string name="dz3">DZ3</string>
    <string name="dz4">DZ4</string>
    <string name="dz5">DZ5</string>
    <string name="dz6">DZ6</string>
    <string name="dz9">DZ9</string>
    <string name="dz8">DZ8</string>
    <string name="age">Age</string>
    <string name="text1">TextView1Text</string>
    <string name="text2">TextView2Text</string>
    <string name="buttonText">Change</string>
    <string name="austria">AUSTRIA</string>
    <string name="polska">POLSKA</string>
    <string name="columbia">COLUMBIA</string>
    <string name="madagaskar">MADAGASKAR</string>
    <string name="thailand">THAILAND</string>
    <string name="denmark">DENMARK</string>
    <string name="hello">Hello</string>
    <string name="enter_url">Please, enter URL</string>
    <string name="load">Load</string>
    <string name="login">LOG IN</string>
    <string name="create_accaunt">CREATE ACCAUNT</string>
    <string name="forgot">
        <u>Forgot your username/password?</u>
    </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="imageURL">
        https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/2019_European_Games_Logo.svg/300px-2019_European_Games_Logo.svg.png
    </string>
    <string name="url">Image URL</string>
    <string name="phone">Phone</string>
    <string name="h61">6\'1"</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="postal_code">Postal code</string>
    <string name="country">Country</string>
    <string name="name">Name</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="trophies">Trophies</string>
    <string name="dylanConner">Dylan Conner</string>
    <string name="contentDescription">Content Description</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="enter_correct_url">Please, enter correct image URL</string>
    <string name="enter_correct_name">Please, enter correct name</string>
    <string name="enter_correct_age">Please, enter correct age</string>
    <string name="student_not_find">Student not find</string>
    <string name="loading_error">LOADING ERROR</string>
    <string name="title_activity_maps">Map</string>
</resources>
