<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".dz6.DZ6StudentEditActivity"
        android:orientation="vertical"
>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:gravity="center"
            android:textSize="@dimen/sp20"
    />
    <EditText
            android:id="@+id/nameEditTextDZ6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionNext"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:gravity="center"
            android:textSize="@dimen/sp20"
    />
    <EditText
            android:id="@+id/ageEditTextDZ6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="number"
            android:imeOptions="actionNext"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:gravity="center"
            android:textSize="@dimen/sp20"
    />
    <EditText
            android:id="@+id/urlEditTextDZ6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textUri"
            android:imeOptions="actionDone"
    />

    <Button
            android:id="@+id/saveButtonDZ6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
    />

</LinearLayout>