<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp"
>
    <ImageView
            android:id="@+id/imageViewDetailDZ8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
    />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp20"
                    android:layout_weight="1"
                    android:text="@string/name"
            />
            <TextView
                    android:id="@+id/studentNameTextViewDZ8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp20"
                    android:layout_weight="1"
                    android:gravity="right"
            />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp20"
                    android:layout_weight="1"
                    android:text="@string/age"
            />
            <TextView
                    android:id="@+id/studentAgeTextViewDZ8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp20"
                    android:layout_weight="1"
                    android:gravity="right"
            />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="bottom"
    >
        <Button
                android:id="@+id/deleteButtonDZ8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/sp20"
                android:text="@string/delete"
        />
        <Button
                android:id="@+id/editButtonDZ8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/sp20"
                android:text="@string/edit"
        />

    </LinearLayout>
</LinearLayout>